# lighting_talk

./: .gitignore
distributed-systems/loadbalancer/: docker-compose.yml
distributed-systems/loadbalancer/certs/: haproxy-selfsigned.pem
distributed-systems/sidecar/: docker-compose.yml
pistache/: CMakeLists.txt  Dockerfile  main.cpp  manifest.yml  pistache-demo
virtualization/: Readme.md  Vagrantfile  cloud-setup.tf  packer.json
virtualization/ansible-nginx/: playbook.yml  webserver
virtualization/ansible-nginx/defaults/: main.yml
virtualization/ansible-nginx/files/: nginx_site.conf
virtualization/ansible-nginx/handlers/: main.yml
virtualization/ansible-nginx/meta/: main.yml
virtualization/ansible-nginx/tasks/: install-app.yml  main.yml  set-role-variables.yml  use-apt.yml
virtualization/ansible-nginx/templates/: nginx.conf.j2
virtualization/ansible-nginx/webserver/content/: index.html
virtualization/duck/: Vagrantfile
virtualization/scripts/: ansible-cleanup.sh  ansible-setup.sh  vagrant-cleanup.sh
